labos4 - update and reg expiry